--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>kms-api-examples</groupId>
-    <artifactId>kms-api-examples</artifactId>
+    <groupId>org.apache</groupId>
+    <artifactId>httpclient</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <dependencies>
           <dependency>
               <groupId>org.apache.httpcomponents</groupId>
               <artifactId>httpclient</artifactId>
-              <version>4.3.2</version>
+              <version>4.5.13</version>
               <type>jar</type>
               <scope>compile</scope>
           </dependency>
@@ -28,12 +28,12 @@
           <dependency>
               <groupId>com.fasterxml.jackson.core</groupId>
               <artifactId>jackson-core</artifactId>
-              <version>2.4.0</version>
+              <version>2.13.3</version>
           </dependency>
           <dependency>
               <groupId>com.fasterxml.jackson.core</groupId>
               <artifactId>jackson-databind</artifactId>
-              <version>2.4.0</version>
+              <version>2.13.3</version>
           </dependency>
       </dependencies>
     <build>
